# repohunter-architecture-generator

./: .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  advisor_engine.py  cloud_inference_api.py  docker-compose.yml  hub.py  ollama_client.py  pyproject.toml  render.yaml  requirements.txt  requirements_cloud.txt
.github/workflows/: ci.yml
github_repohunter/: ai_dataset_synthesizer.py  ai_dataset_synthesizer_parallel.py  architecture_agents.py  bulk_hunter.py  cli.py  firebase_setup.py  global_hunter.py  guardrail_checker.py  orchestrator.py  parallel_launch.sh  rag_engine.py  repo_discovery_engine.py  requirements.txt  security_utils.py  server.py
github_repohunter/database/training/: matchmaker_pairs.jsonl  platinum_matchmaker.jsonl
github_repohunter/database/validated/: gems_MLX_AI_safe.json  global_master_dataset.jsonl  master_dataset.json
github_repohunter/scripts/: Modelfile  cloud_inference_api.py  cloud_sync.py  cloud_train_unsloth.py  continuous_sync_orchestrator.py  migrate_to_cloud.py  reformat_training_data.py  super_migrate.py  synthesize_data_v2.py  synthesize_ocean_data.py  test_repohunter_adapters.py
github_repohunter/training/: auto_cleaner.py  clean_dataset.ipynb  generate_preference_data.py  mlx_train_config.yaml  prepare_mlx_data.py  run_lora_train.sh  train_repohunter.sh
tests/: test_architecture_agents.py  test_security_utils.py
